用户界面 - 商品筛选、排序

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -58,9 +58,6 @@ body {
 }
 
 .products-index-page {
-  .pagination {
-    margin-right: 5px;
-  }
   .products-list {
     padding: 0 15px;
     .product-item {
@@ -118,4 +115,13 @@ body {
       }
     }
   }
+  .pagination {
+    margin-right: 5px;
+  }
+  .search-form {
+    padding: 0 5px 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #eee;
+  }
+
 }
