--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,9 @@
+
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
-
 
 /* universal */
 
@@ -58,7 +58,7 @@ body {
   }
 }
 
-.products-index-page, .products-favorites-page {
+@mixin product-list {
   .products-list {
     padding: 0 15px;
     .product-item {
@@ -116,9 +116,15 @@ body {
       }
     }
   }
+}
+
+.products-index-page, .products-favorites-page {
   .pagination {
     margin-right: 5px;
   }
+
+  // scss 的 @include 用于引用一段样式
+  @include product-list;
 
   // 替换原有的 .search-form
   .search-form {
@@ -140,6 +146,21 @@ body {
       a {
         text-decoration: none;
         color: #666;
+      }
+    }
+    .filter {
+      border: 1px red solid;
+      font-size: 12px;
+      padding: 2px 0 2px 2px;
+      .filter-value {
+        color: red;
+      }
+      .remove-filter {
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+        background: red;
+        padding: 2px;
       }
     }
   }
@@ -168,7 +189,6 @@ body {
       }
     }
   }
-
 
 }
 
@@ -290,6 +310,65 @@ body {
       padding: 20px;
     }
   }
+  .crowdfunding-info {
+    margin-bottom: 20px;
+    font-size: 14px;
+    .have-text {
+      font-size: 16px;
+    }
+    .total-amount {
+      .symbol {
+        font-size: 20px;
+      }
+      font-size: 32px;
+    }
+    .progress {
+      height: 10px;
+      margin-bottom: 5px;
+    }
+    .progress-info {
+      font-weight: 600;
+      margin: 10px 0;
+    }
+    .current-progress {
+      color: rgb(161, 6, 224);
+    }
+    .text-red {
+      color: red;
+    }
+  }
+  .properties-list {
+    border-bottom: 1px solid #e6e6e6;
+    margin-bottom: 20px;
+    .properties-list-title {
+      padding: 5px 0;
+      color: #999;
+      font-weight: 700;
+    }
+    .properties-list-body {
+      font-size: 12px;
+      padding: 5px 0;
+      list-style: none;
+      text-indent: 0;
+      li {
+        display: inline-block;
+        width: 30%;
+        overflow: hidden;
+      }
+    }
+  }
+  .product-description img {
+    max-width: 100%;
+  }
+  .similar-products {
+    @include product-list;
+    .title {
+      font-weight: normal;
+    }
+    .price {
+      background-color: unset;
+    }
+  }
 }
 
 .cart-index-page {
@@ -337,7 +416,6 @@ body {
     }
   }
 }
-
 
 .orders-index-page {
   .list-group-item {
@@ -449,14 +527,7 @@ body {
       padding-right: 20px;
     }
   }
-  .payment-buttons {
-    margin-top: 10px;
-    padding-right: 10px;
-  }
-  .payment-buttons, .receive-button {
-    margin-top: 10px;
-    padding-right: 10px;
-  }
+
   .payment-buttons, .receive-button, .refund-button {
     margin-top: 10px;
     padding-right: 10px;
@@ -541,5 +612,92 @@ body {
 
   textarea {
     border-radius: 0px;
+  }
+}
+
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu a::after {
+  transform: rotate(-90deg);
+  position: absolute;
+  right: 3px;
+  top: 40%;
+}
+
+.dropdown-submenu:hover > .dropdown-menu, .dropdown-submenu:focus > .dropdown-menu {
+  display: flex;
+  flex-direction: column;
+  position: absolute !important;
+  margin-top: -30px;
+  left: 100%;
+}
+
+@media (max-width: 992px) {
+  .dropdown-menu {
+    width: 50%;
+  }
+  .dropdown-menu .dropdown-submenu {
+    width: auto;
+  }
+}
+
+.installments-show-page {
+  font-size: 12px;
+  .table {
+    margin-bottom: 0;
+    .repaid {
+      color: green;
+    }
+    .overdue {
+      color: red;
+    }
+  }
+  .item-amount {
+    padding-right: 20px;
+    width: 200px;
+  }
+  .installment-top {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;
+  }
+  .installment-info {
+    width: 50%;
+    .line {
+      display: flex;
+      flex-direction: row;
+      .line-label {
+        width: 80px;
+        text-align: right;
+      }
+      .line-value {
+        padding-left: 20px;
+        flex-shrink: 100;
+      }
+    }
+    border-right: 1px solid #ddd;
+  }
+  .installment-next {
+    width: 50%;
+    font-family: Verdana,Tahoma,Helvetica,Arial;
+    .installment-clear {
+      font-weight: bolder;
+      font-size: 16px;
+    }
+    .total-amount {
+      font-weight: bolder;
+      font-size: 14px;
+    }
+    .value {
+      display: inline-block;
+      width: 150px;
+      padding-right: 20px;
+    }
+  }
+  .payment-buttons {
+    margin-top: 10px;
+    padding-right: 10px;
   }
 }
